# research

./: .gitignore  113913953-2021-10-01.csv  new_vk_wall_handler.ipynb  pyproject.toml  vk.md  vk_getwall.py  vk_wall_handler.ipynb  vk_wall_handler.py
recognizer_research/: recognizer.py  recognizer_research.ipynb
