[tool.poetry]
name = "research"
version = "0.1.0"
description = ""
authors = ["Evgenij Karpov <gedrip87@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.19.0"
jupyter = "^1.0.0"
pydantic = "^1.8.2"
glom = "^20.11.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
